# NeuralNetwork_XOR

./: CMakeLists.txt  DemoTools.h  README.md  main.cpp
NeuralNetwork/: CLNeuralNetwork.cpp  CLNeuralNetwork.h  CLNeuron.cpp  CLNeuron.h  CLNeuronConnection.h
Training/: TrainingData.cpp  TrainingData.h  trainingData.txt
